--- a/Calc/index.html
+++ b/Calc/index.html
@@ -2,46 +2,40 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="calc.css">
     <title>Calculator</title>
 </head>
-    <body>
-        <div>
-            <div class="clac-container" >
-                <div class="title">Calculator</div>
-                <input type="text"  value="00" class="display" id="text">
-                <div>
-                </div>
-                <div>
-                    <button class="num" id="7" onclick=" display(this.value)" value="7">7</button>
-                    <button class="num" id="8" onclick=" display(this.value)" value="8">8</button>
-                    <button class="num" id="9" onclick=" display(this.value)" value="9">9</button>
-                    <button class="num" id="ac" onclick="AC()">AC</button>
-                    <button class="num" id="clr" onclick="Clr()"><<</button>
-                </div>
-                <div>
-                    <button class="num" id="4" onclick=" display(this.value)" value="4">4</button>
-                    <button class="num" id="5" onclick=" display(this.value)" value="5">5</button>
-                    <button class="num" id="6" onclick=" display(this.value)" value="6">6</button>
-                    <button class="num"  onclick="oparator(1)" id="add">+</button>
-                    <button class="num" onclick="oparator(2)"id="sub">-</button>
-                </div>
-                <div>
-            <button class="num" id="1" onclick=" display(this.value)" value="1">1</button>
-            <button class="num" id="2" onclick=" display(this.value)" value="2">2</button>
-            <button class="num" id="3" onclick=" display(this.value)" value="3">3</button>
-            <button class="num" onclick=oparator(3) id="mul">*</button>
-            <button class="num" onclick=oparator(4) id="div">/</button>
-        </div>
-        <button class="num" id="0" onclick=" display(this.value)" value="0">0<button>
-            <button class="num" id="00" onclick=" display(this.value)" value="00">00<button>
-                <button class="num"  id="." onclick="display(this.value) " value=".">.</button>
-                <button class="num" id="eql" onclick=eql() id="eql">=</button>
-            
+<body>
+    <div class="calc-container">
+        <div class="title">Calculator</div>
+        <input type="text" value="00" class="display" id="text" readonly>
+        
+        <div class="button-grid">
+            <button class="num" id="7" onclick="display(this.value)" value="7">7</button>
+            <button class="num" id="8" onclick="display(this.value)" value="8">8</button>
+            <button class="num" id="9" onclick="display(this.value)" value="9">9</button>
+            <button class="num" id="ac" onclick="AC()">AC</button>
+            <button class="num" id="clr" onclick="Clr()"><<</button>
+
+            <button class="num" id="4" onclick="display(this.value)" value="4">4</button>
+            <button class="num" id="5" onclick="display(this.value)" value="5">5</button>
+            <button class="num" id="6" onclick="display(this.value)" value="6">6</button>
+            <button class="num" onclick="oparator(1)" id="add">+</button>
+            <button class="num" onclick="oparator(2)" id="sub">-</button>
+
+            <button class="num" id="1" onclick="display(this.value)" value="1">1</button>
+            <button class="num" id="2" onclick="display(this.value)" value="2">2</button>
+            <button class="num" id="3" onclick="display(this.value)" value="3">3</button>
+            <button class="num" onclick="oparator(3)" id="mul">*</button>
+            <button class="num" onclick="oparator(4)" id="div">/</button>
+
+            <button class="num" id="0" onclick="display(this.value)" value="0">0</button>
+            <button class="num" id="00" onclick="display(this.value)" value="00">00</button>
+            <button class="num" id="." onclick="display(this.value)" value=".">.</button>
+            <button class="num" id="eql" onclick="eql()">=</button>
         </div>
     </div>
-    </body>
-    <script src="calc.js"></script>
-    </html>
+</body>
+<script src="calc.js"></script>
+</html>
