--- a/Calc/index.html
+++ b/Calc/index.html
@@ -27,12 +27,13 @@
             <button class="num" id="3" onclick="display(this.value)" value="3">3</button>
             <button class="num" onclick="oparator(2)" id="sub">-</button>
             
-            <button class="num" id="." onclick="display(this.value)" value=".">.</button>
-            <button class="num" id="0" onclick="display(this.value)" value="0">0</button>
             <button class="num" id="00" onclick="display(this.value)" value="00">00</button>
+            <button class="num" id="0" onclick="display(this.value)" value="0">0</button>
             <button class="num" onclick="oparator(4)" id="div">/</button>
             <button class="num" onclick="oparator(3)" id="mul">*</button>
+            <button class="num" id="." onclick="display(this.value)" value=".">.</button>
             <button class="num" id="clr" onclick="Clr()"><<</button>
+            <button class="num" id="clear" onclick="Clear()">clr</button>
             <button class="num" id="eql" onclick="eql()">=</button>
         </div>
     </div>
