--- a/Calc/index.html
+++ b/Calc/index.html
@@ -33,7 +33,7 @@
             <button class="num" onclick="oparator(3)" id="mul">*</button>
             <button class="num" id="." onclick="display(this.value)" value=".">.</button>
             <button class="num" id="clr" onclick="Clr()"><<</button>
-            <button class="num" id="clear" onclick="clear()">clr</button>
+<!--             <button class="num" id="clear" onclick="clear()">clr</button> -->
             <button class="num" id="eql" onclick="eql()">=</button>
         </div>
     </div>
